<resources>
    <string name="app_name">AQE Star Captain</string>
    <string name="answer">Enter your answer</string>
    <string name="title_login">AQE Star Captain Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="attempts">Attempts:</string>
    <string name="choose">Choose</string>
    <string name="new_profile_name">New Profile Name:</string>
    <string name="submit">Submit</string>
    <string name="play">Play</string>
    <string name="finished">Finished!</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="secret_pin">Secret 4 digit PIN</string>
    <string name="your_name">Your Name</string>
    <string name="remember_your_pin">Remember your PIN!</string>
    <string name="back">Back</string>
    <string name="error_message">Error Message</string>
    <string name="profiles">Profiles</string>
    <string name="home">Home</string>
    <string name="create_a_profile_here"><![CDATA[Create a profile here -->]]></string>
    <string name="coin">Coin</string>
    <string name="coins">Coins</string>
    <string name="log_out">Log Out</string>
    <string name="congratulations">Congratulations!</string>
    <string name="starreward">StarReward</string>
    <string name="rainbow_star">Rainbow Star</string>
    <string name="sparkle_star">Sparkle Star</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="red_star">Red Star</string>
    <string name="pink_star">Pink Star</string>
    <string name="purple_star">Purple Star</string>
    <string name="green_star">Green Star</string>
    <string name="blue_star">Blue Star</string>
    <string name="orange_star">Orange Star</string>
    <string name="rewards">Rewards</string>
    <string name="collect_all_the_different_stars">Collect all the different Stars!</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="fun_quiz_game_that_will_help_practice_for_the_aqe_transfer_tests">Fun Quiz game that will help practice for the AQE Transfer tests!</string>
    <string name="_1000_s_of_aqe_standard_questions">1000\'s of AQE standard questions!</string>
    <string name="partnering_web_app_to_help_track_statistics_areas_to_improve"><![CDATA[Partnering Web App to help track statistics & areas to improve.]]></string>
    <string name="statistics">Statistics</string>
    <string name="trophies">Trophies</string>
    <string name="starcaptain">starCaptain</string>
    <string name="create_a_profile_to_start_playing">Create a Profile to start playing!</string>
    <string name="rocket">rocket</string>
    <string name="username">Username</string>
</resources>
