<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
        android:hint="@string/username"
        android:inputType="" />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_name"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_name"
        android:layout_marginEnd="162dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_password"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_password"
        android:layout_marginEnd="-162dp"
        android:enabled="false"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:onClick="main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/main_register"
        android:layout_below="@+id/main_login"
        android:layout_alignEnd="@+id/main_login"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/main_name"
        android:layout_marginEnd="21dp"
        android:text="@string/remember_me" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="355dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/_1000_s_of_aqe_standard_questions"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/starCaptain"
        android:layout_width="wrap_content"
        android:layout_height="281dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/starcaptain"
        app:srcCompat="@drawable/rocket_person" />

</RelativeLayout>