<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starrybg"
    tools:context=".PlayActivity">

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="134dp"
        android:layout_height="77dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/buttons"
        android:text="@string/play"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rewardButton"
        android:layout_width="134dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/buttons"
        android:text="@string/rewards"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayButton" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textviews"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/coinsTotal"
        android:layout_width="95dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/textviews"
        app:layout_constraintBottom_toTopOf="@+id/Welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/coin"
        android:src="@drawable/coin"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="75dp"
        android:layout_height="272dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/trophies"
        app:layout_constraintEnd_toStartOf="@+id/rewardButton"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayButton"
        app:srcCompat="@drawable/trophy" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="220dp"
        android:layout_height="208dp"
        android:contentDescription="@string/rocket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayButton"
        app:srcCompat="@drawable/rocketvertical" />

</android.support.constraint.ConstraintLayout>