<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Button"
    android:background="@drawable/spacebg"
    tools:context=".ReplayActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="359dp"
        android:layout_height="188dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textviews"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/response"
        android:layout_width="337dp"
        android:layout_height="312dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textviews"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitButton"
        style="@style/AppTheme.Button"
        android:layout_width="92dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textviews"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/continueButton"
        style="@style/AppTheme.Button"
        android:layout_width="78dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitButton" />

    <Button
        android:id="@+id/finished"
        style="@style/AppTheme.Button"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:text="@string/finished"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coins"
        android:layout_width="248dp"
        android:layout_height="246dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/coins"
        android:src="@drawable/coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/youEarned"
        android:layout_width="219dp"
        android:layout_height="155dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="306dp"
        android:layout_height="120dp"
        android:layout_marginTop="104dp"
        android:background="@color/transparent"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/finished" />

    <ImageView
        android:id="@+id/Star"
        android:layout_width="266dp"
        android:layout_height="231dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/starreward"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/response"
        android:src="@drawable/blue" />

</android.support.constraint.ConstraintLayout>